# ml-pro

./: .gitignore  README.md  requirements.txt
.github/workflows/: code_quality_check.yml
1 Les Fondamentaux/3 SQL/: bibliotheque.db  exercice-1-sql.sql  exercice-1-sqlite3.ipynb  pyproject.toml
1 Les Fondamentaux/6 Programme d'entraînement Python/: exercice-1-le-voyageur-de-commerce.ipynb  pyproject.toml
1 Les Fondamentaux/X Programme d'entraînement Python/: exercice-1-le-voyageur-de-commerce.ipynb  villes.txt
1 Les Fondamentaux/X Programme entraînement Python/: exercice-1-le-voyageur-de-commerce.ipynb  exercice-2-la-poo-avec-python.ipynb  exercice-3-la-recherche-dichotomique.ipynb  exercice-4-les-algorithmes-de-tri.ipynb  exercice-5-les-décorateurs.ipynb  exercice-6-les-générateurs.ipynb  pyproject.toml
2 Formation Mathématiques/X Prise en main de Manim/: manim.ipynb
3 Algorithmes de Machine Learning/1 Modèles linéaires/: README.md  pyproject.toml
3 Algorithmes de Machine Learning/1 Modèles linéaires/01_Introduction/: 01_questce_quun_modele_lineaire.ipynb
3 Algorithmes de Machine Learning/1 Modèles linéaires/02_Regression_linéaire/: 01_moindres_carres.ipynb  02_descente_de_gradient.ipynb  03_equations_normales.ipynb  04_regression_multiple.ipynb  05_regression_polynomiale.ipynb  06_modeles_regularises.ipynb
3 Algorithmes de Machine Learning/1 Modèles linéaires/03_Classification_linéaire/: 01_regression_logistique.ipynb
3 Algorithmes de Machine Learning/1 Modèles linéaires/04_Modèles_avancés/: 01_LARS.ipynb
X Projets/flashcards/: README.md  (+4 more)
(+20 files in other folders)
