[project]
name = "python-training"
version = "0.1.0"
description = ""
authors = [
    {name = "Bryan Tchakote",email = "tchakomanuel@gmail.com"}
]
readme = "README.md"
requires-python = "^3.12"
dependencies = [
    "ipykernel (>=6.29.5,<7.0.0)",
    "numpy (>=2.2.3,<3.0.0)",
    "matplotlib (>=3.10.0,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
